[tool.poetry]
name = "vqe-by-indirect-ctl"
version = "0.1.0"
description = ""
authors = ["tanan <toshifumi.anan@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qulacs = "^0.6.1"
numpy = "^1.25.0"
scipy = "^1.10.1"
openfermion = "^1.5.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
pytest = "^7.3.2"
docformatter = "^1.7.3"

[tool.poetry.group.extras.dependencies]
google-cloud-bigquery = "^3.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]